--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
   "author": "Vlad Freishmidt",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.6",
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js --delay 2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
