--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^3.22.0",
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node index.js --delay 2"
